adjust the width on the headerline to stop the overflow

--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ a {
 
 .headerline {
   height: 1px;
-  width: 200%;
+  width: 107%;
   background-color: black;
   margin-top: -10px;
   margin-left: 0;
